k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
  labels:
    app.kubernetes.io/name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/sandbox"
        backend:
          service:
            name: sandbox-service
            port:
              number: 80
              
  - http:
      paths:
      - pathType: Prefix
        path: "/api/ai"
        backend:
          service:
            name: ai-service
            port:
              number: 80


  - host: "*.preview.localhost"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: router-service
              port:
                number: 80
  
  - host: "*.agent.localhost"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: router-service
              port:
                number: 80
